页面样式修改

--- a/src/style/app.css
+++ b/src/style/app.css
@@ -2,6 +2,10 @@ body{
   font-family: "Segoe UI","Lucida Grande",Helvetica,Arial,"Microsoft YaHei",FreeSans,Arimo,"Droid Sans","wenquanyi micro hei","Hiragino Sans GB","Hiragino Sans GB W3",FontAwesome,sans-serif;
 }
 
+.ng-table th {
+  text-align: left;
+}
+
 .modal{
     display: block;
     overflow-y: auto;
